# Bidder

./: README.md
backend/: .gitignore  build.gradle.kts
backend/src/main/kotlin/hu/bme/auction/: AuctionApplication.kt
backend/src/main/kotlin/hu/bme/auction/config/: TemplateConfig.kt
backend/src/main/kotlin/hu/bme/auction/controller/: BidController.kt  CategoryController.kt  ItemController.kt  UserController.kt
backend/src/main/kotlin/hu/bme/auction/dao/: BidRepository.kt  CategoryRepository.kt  ItemRepository.kt  UserRepository.kt  WatchlistRepository.kt
backend/src/main/kotlin/hu/bme/auction/dto/: CreateBidDto.kt  CreateItemDto.kt  ItemWithDetailsDto.kt  LoginUserDto.kt  RegisterUserDto.kt
backend/src/main/kotlin/hu/bme/auction/entity/: Bid.kt  Category.kt  Item.kt  User.kt  Watchlist.kt
backend/src/main/kotlin/hu/bme/auction/service/: BidService.kt  CategoryService.kt  EmailSenderService.kt  ItemService.kt  UserService.kt
backend/src/main/resources/: application-test.properties  application.properties
backend/src/test/kotlin/hu/bme/auction/: AuctionApplicationTests.kt
backend/src/test/kotlin/hu/bme/auction/controller/: BidControllerTest.kt  CategoryControllerTest.kt  ItemControllerTest.kt  UserControllerTest.kt
frontend/: .gitignore  BidsList.cpp  BidsList.h  CMakeLists.txt  User.cpp  User.h  assets.qrc  bidelement.cpp  bidelement.h  main.cpp  qml.qrc
frontend/qml/: AccountPage.qml  BidsPage.qml  ControlPanel.qml  ExplorePage.qml  Form.qml  Main.qml  MenuSideBar.qml  OwnGoodsPage.qml  WatchlistPage.qml
